gitops/components/volume-snapshotter/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-snapshotter
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: snapshotter
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: $(NODES_SUBNET)
      ports:
        - protocol: TCP
          port: 6443
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
